# MI-PDP

./: CMakeLists.txt  main.cpp
Factory/: Factory.cpp  Factory.h
HelpfulObject/: Direction.cpp  Direction.h  ObjectType.cpp  ObjectType.h  Position.cpp  Position.h  State.cpp  State.h
Input/: InputLoader.cpp  InputLoader.h
Logic/: CalculationCoverageAlgorithm.cpp  CalculationCoverageAlgorithm.h
Object/: Cell.cpp  Cell.h  DisabledTile.cpp  DisabledTile.h  FirstTile.cpp  FirstTile.h  SecondTile.cpp  SecondTile.h  SimpleTile.cpp  SimpleTile.h  Table.cpp  Table.h  Tile.cpp  Tile.h
pdp_poi/: poim1.txt  poim2.txt  poim3.txt  poim4.txt  poim5.txt  poim6.txt  poim7.txt
